--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
+
+      Deploy to github, run 'npm run deploy'.
     -->
   </body>
 </html>
